// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image does render with all props 1`] = `
<div
  className="col-md-3 col-sm-6 col-xs-12"
>
  <div
    className="rka-image-tile additional-classes is-uploaded is-clickable"
    onClick={[Function]}
  >
    <div
      className="rka-image-tile-hd"
    >
      <a
        className="rka-image-tile-link rka-link"
        href="http://example.org/image.png"
        onClick={[Function]}
        target="_blank"
      >
        Open in new window
      </a>
      <span
        className="rka-image-checkbox-container"
      >
        <i
          className="roka-image-checkbox rka-checkbox-icon is-checked"
        />
      </span>
      <img
        alt="Example name"
        onError={[Function]}
        src="http://example.org/image.src.png"
      />
    </div>
    <div
      className="rka-image-tile-ft"
    >
      <div
        className="rka-image-tile-specs txt-ellipsis"
        title="PNG, 10KB, 100×100"
      >
        PNG, 10KB, 100×100
      </div>
      <div
        className="rka-image-tile-name txt-ellipsis"
        title="Example name"
      >
        Example name
      </div>
    </div>
  </div>
</div>
`;

exports[`Image does render with minimal props 1`] = `
<div
  className="col-md-3 col-sm-6 col-xs-12"
>
  <div
    className="rka-image-tile is-uploading"
    onClick={[Function]}
  >
    <div
      className="rka-image-tile-hd"
    >
      <a
        className="rka-image-tile-link rka-link"
        href="http://example.org/image.png"
        onClick={[Function]}
        target="_blank"
      >
        Open in new window
      </a>
      <img
        alt="Example name"
        onError={[Function]}
        src="http://example.org/image.src.png"
      />
    </div>
    <div
      className="rka-image-tile-ft"
    >
      <div
        className="rka-image-tile-specs txt-ellipsis"
        title="?×?"
      >
        ?×?
      </div>
      <div
        className="rka-image-tile-name txt-ellipsis"
        title="Example name"
      >
        Example name
      </div>
    </div>
  </div>
</div>
`;
